# fastapi-app

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-bake.hcl  docker-compose.yml  pyproject.toml
.github/workflows/: code_quality.yaml  docker-bake.yaml  integration-test.yaml  release.yaml  unit-tests.yaml
app/: crud.py  db.py  main.py  models.py  schemas.py
scripts/: run_tests.sh
tests/integration/: conftest.py  test_endpoints.py
tests/unit/: test_routes.py
