[project]
name = "fastapi-app"
version = "0.1.0"
description = "Simple birthday API built with FastAPI and PostgreSQL"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "asyncpg>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "py314"
line-length = 79
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
  "build",
  "dist",
  "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = 3.14
ignore_missing_imports = true
strict = true
warn_unused_configs = true
exclude = [
  "build",
  "tests",
]
